# playwright-core

./: .gitignore  LICENSE  README.md  pyproject.toml
src/playwright_core/: __init__.py
src/playwright_core/config/: __init__.py  settings.py
src/playwright_core/driver/: __init__.py  driver_factory.py
src/playwright_core/pages/: __init__.py  base_page.py
src/playwright_core/reporting/: __init__.py  evidence_collector.py  pdf_evidence_report.py
src/playwright_core/testing/: __init__.py  base_test.py  pytest_plugin.py  testng_runner.py
tools/runners/: run_tests_unix.sh  run_tests_windows.bat  run_tests_windows.ps1
tools/setup/: setup_unix.sh  setup_windows.bat  setup_windows.ps1
