[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-core"
version = "0.1.0"
description = "Reusable Playwright automation core for Python QA projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.52.0",
    "pytest==8.3.5",
    "reportlab==4.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
